modify getTweet return value (#70)
* fix:local setting

* feat: add getTweets route

* feat: add createTweet function

* feat: add getTweet function

* feat: add tweet post & get replies function

* doc: add swagger.yaml

* fix: delete route deleteReply

* modify: getTweets

* modify: getReplies

* fix: getReplies change tweetId

* modify: add replies user avatar & name

* doc: getTweets & getReplies swagger

* modify: getTweet return value

* doc: getTweet swagger
